--- a/html 01/index.html
+++ b/html 01/index.html
@@ -6,7 +6,7 @@
     <title>atividade 01 de html</title>
 </head>
 <body>
-    <h1>Atividade em html início</h1>
+    <h1> html início</h1>
     <div>
         <p> esté é meu primeiro <strong>parágrafo</strong> em html</p>
             <hr>
