atualização das questões

--- a/html 01/index.html
+++ b/html 01/index.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
+<!-- Define que este documento é um arquivo HTML5 -->
+
 <html lang="pt-br">
+<!-- Define o idioma principal da página como português do Brasil -->
+
 <head>
     <meta charset="UTF-8">
+    <!-- Define o conjunto de caracteres como UTF-8, garantindo que acentos e símbolos sejam exibidos corretamente -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Garante que o site será exibido corretamente em dispositivos móveis -->
+
     <title>atividade 01 de html</title>
+    <!-- Título que aparece na aba do navegador -->
 </head>
+
 <body>
+    <!-- Início do corpo do documento, onde o conteúdo visível da página é inserido -->
+
     <h1> html início</h1>
+    <!-- Título principal da página -->
+
     <div>
+        <!-- Divisão de conteúdo, usada para agrupar elementos -->
+
         <p> esté é meu primeiro <strong>parágrafo</strong> em html</p>
-            <hr>
-            <p>continuo aprendendo htlm,<br> agora chonhecendo mais tags! Com <a
-                href="https://portal.uneb.br"target="_blank">este link</a>você vai 
-                para o portal da uneb, Com este comando eu mostro o sinal de menor: &lt;</p>
-            <p>O <span style="color:rgb(50, 170, 170);">HTML</span> é a base da web.</p>
-            
+        <!-- Parágrafo com texto, usando a tag <strong> para deixar a palavra “parágrafo” em negrito -->
+
+        <hr>
+        <!-- Linha horizontal usada para separar seções -->
+
+        <p>
+            continuo aprendendo htlm,<br>
+            <!-- <br> faz uma quebra de linha -->
+
+            agora chonhecendo mais tags! Com 
+            <a href="https://portal.uneb.br" target="_blank">este link</a>
+            <!-- Tag <a> cria um link; o atributo href define o destino, e target="_blank" faz abrir em nova aba -->
+
+            você vai para o portal da uneb, 
+            Com este comando eu mostro o sinal de menor: &lt;
+            <!-- &lt; é uma entidade HTML usada para mostrar o símbolo "<" na tela -->
+        </p>
+
+        <p>O <span style="color:rgb(50, 170, 170);">HTML</span> é a base da web.</p>
+        <!-- <span> permite aplicar estilos em partes específicas do texto; aqui muda a cor da palavra "HTML" -->
     </div>
-    <a href="https://portal.uneb.br"target="_blank">portal da uneb.</a>
+
+    <a href="https://portal.uneb.br" target="_blank">portal da uneb.</a>
+    <!-- Outro link para o portal da UNEB, também abrindo em nova aba -->
+
     <br>
-    <img src=" https://play-lh.googleusercontent.com/wkhyrwVo0JYvVnzd8WWl6-lv9DvPGu6CNyI3onbBz_fzFcPjQk0rIb5URG4Xo-cBjA"
-    alt=" imagem da web">
-    <img src="img atividade web.png"
-    alt="imagem que reprsenta game">
-            
+    <!-- Quebra de linha -->
+
+    <img src="https://play-lh.googleusercontent.com/wkhyrwVo0JYvVnzd8WWl6-lv9DvPGu6CNyI3onbBz_fzFcPjQk0rIb5URG4Xo-cBjA"
+    alt="imagem da web">
+    <!-- Exibe uma imagem hospedada na web; o atributo alt descreve a imagem caso ela não carregue -->
+
+    <img src="img atividade web.png" alt="imagem que representa game">
+    <!-- Exibe uma imagem armazenada localmente no projeto -->
 </body>
+
 </html>
+<!-- Fim do documento HTML -->
