--- a/jogo 2.js/tela-inicial.html
+++ b/jogo 2.js/tela-inicial.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adivinhe a Palavra</title>
-  <link rel="stylesheet" href="..//css/style-tela-inicial.css">
+  <link rel="stylesheet" href="css/style-tela-inicial.css">
 </head>
 <body>
   <!-- Letras animadas geradas via script -->
@@ -18,6 +18,6 @@
     </div>
   </div>
 
-  <script src="..//js/script-tela-inicial.js"></script>
+  <script src="js/script-tela-inicial.js"></script>
 </body>
 </html>
