--- a/jogo 2.js/tela-jogo.html
+++ b/jogo 2.js/tela-jogo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adivinhe a Palavra - Jogo</title>
-  <link rel="stylesheet" href="../css/style-tela-jogo.css">
+  <link rel="stylesheet" href="css/style-tela-jogo.css">
 </head>
 <body>
   <div class="container">
@@ -28,6 +28,6 @@
     </div>
   </div>
 
-  <script src="../js/script-tela-jogo.js"></script>
+  <script src="js/script-tela-jogo.js"></script>
 </body>
 </html>
