--- a/jogo 2.js/tela-modos.html
+++ b/jogo 2.js/tela-modos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escolha o Modo - Adivinhe a Palavra</title>
-  <link rel="stylesheet" href="..//css/style-tela-modos.css">
+  <link rel="stylesheet" href="css/style-tela-modos.css">
 </head>
 <body>
   <!-- Letras de fundo animadas -->
@@ -20,6 +20,6 @@
     <button id="btnVoltar" class="voltar">⬅️ Voltar</button>
   </div>
 
-  <script src="..//js/script-tela-modos.js"></script>
+  <script src="js/script-tela-modos.js"></script>
 </body>
 </html>
